<resources>

    <string name="app_name">Рабочий список</string>
    <string name="work_with_tasks">Работа с заданиями</string>
    <string name="check_list">Чек-лист</string>
    <string name="create_task">Создать задание</string>
    <string name="print_labels">Печать ценников</string>
    <string name="not_processed">К обработке</string>
    <string name="task_list">Список заданий</string>

    <!-- Заголовки экранов -->
    <string name="title_market_number">ТК - %1$s</string>

    <!-- Подзаголовки экранов -->
    <string name="specify_product">Укажите товар</string>
    <string name="print_settings">Настройка печати</string>
    <string name="product_information">Информация о товаре</string>
    <string name="goods_list">Список товаров</string>

    <!-- Заголовки вкладок -->
    <string name="common_good_info_title">Общая</string>
    <string name="additional_good_info_title">Доп. инфо</string>
    <string name="good_providers_list_title">Поставщики</string>
    <string name="stocks_list_title">Остатки</string>
    <string name="processing">К обработке</string>
    <string name="processed">Обработанные</string>
    <string name="search">Поиск</string>
    <string name="parts">Партии</string>
    <string name="z_parts">Z-партии</string>

    <!-- Информационные сообщения -->
    <string name="confirm_price_tags_printing">Подтвердите печать %1$d копий ценников</string>
    <string name="make_sure_yellow_paper_installed">Убедитесь, что в принтере %1$s установлена бумага для желтых ценников и подтвердите количество копий для печати (%2$d шт.)</string>
    <string name="make_sure_red_paper_installed">Убедитесь, что в принтере %1$s установлена бумага для красных ценников и подтвердите количество копий для печати (%2$d шт.)</string>
    <string name="price_tags_submitted">Ценники переданы на печать</string>
    <string name="set_task_to_status_calculated">Провести задание в статус \"Посчитано\" и закрыть его для редактирования?</string>
    <string name="raw_goods_remained_in_task">В задании остались необработанные товары. Сохранить в статусе "Опубликовано" и оставить доступным для продолжения пересчета?</string>
    <string name="print_price_tag_for_good">Распечатать ценник по товару \"%1$s\"?</string>
    <string name="unsaved_data_found_on_device">На устройстве обнаружены несохраненные данные. Перейти к данным?</string>
    <string name="unsaved_task_found_on_device">На устройстве обнаружены несохраненные задания. Перейти к данным?</string>
    <string name="scanned_good_not_listed_in_lenta">Отсканированная марка не числится в сети "Лента". Проведите инвентаризацию данного товара для выявления расхождений.</string>
    <string name="scanned_good_not_listed_in_tk">Отсканированная марка числится в ТК - %1$s. Проведите инвентаризацию данного товара для выявления расхождений.</string>
    <string name="scanned_good_already_added_to_task">Отсканированная марка уже добавлена в задание. Удалить марку?</string>
    <string name="number_of_positions_exceeded_in_task">В задании превышено количество позиций. Добавление невозможно.</string>
    <string name="no_network_to_save_task">Для сохранения задания в SAP ERP отсутствует сеть. Задание будет сохранено позже.</string>
    <string name="good_not_found_in_database">Данный товар не найден в справочнике</string>
    <string name="twelve_characters_entered">Введено 12 знаков. Какой код вы ввели?</string>
    <string name="wrong_barcode_format">Неверный формат штрихкода</string>
    <string name="device_not_support_video_scan">На данном устройстве не поддерживается потоковое сканирование.</string>
    <string name="incorrect_production_date">Некорректная дата производства.</string>
    <string name="server_connection_error">Ошибка подключения к серверу</string>
    <string name="number_of_copies_exceeds_maximum">Количество копий превышает максимально допустимое.</string>
    <string name="set_zero_quantity">Вы действительно хотите установить 0 в поле количества для %1$d товаров из списка?</string>
    <string name="stock_item_not_found">Не удалось найти данные о складе!</string>
    <string name="z_part">Z-партия</string>


    <string name="total_quantity">Итого: %1$s %2$s</string>
    <string name="quantity_st">%1$d шт.</string>
    <string name="quantity_units">%1$d %2$s.</string>
    <string name="sl_date">СГ - %1$s</string>
    <string name="pd_date">ДП - %1$s</string>
    <string name="shelf_life_days">%1$d сут.</string>
    <string name="one_space_two">%1$s %2$s</string>
    <string name="one_slash_two">%1$s/%2$s</string>
    <string name="price_r">%1$dр</string>


    <string name="enter_task_number_sap_login">Введите номер задания / SAP логин</string>
    <string name="enter_task_number">Введите номер задания</string>
    <string name="copy_quantity">Кол-во копий</string>
    <string name="printer_type">Тип принтера</string>
    <string name="price_tag_type">Тип ценника</string>
    <string name="device_ip">IP адрес</string>
    <string name="quantity">Количество</string>
    <string name="publication_date">Дата публикации</string>
    <string name="comment">Комментарий</string>
    <string name="total_shelf_life">Общий СГ</string>
    <string name="remaining_shelf_life">Остаточный СГ</string>
    <string name="barcode_units">Штрихкод/ЕИ ШК</string>
    <string name="gt_gz">ГТ/ГЗ</string>
    <string name="promotions">Промо-акции</string>
    <string name="price_without_dk">Цена без ДК</string>
    <string name="price_with_dk">Цена с ДК</string>
    <string name="goods_arrival">Приход</string>
    <string name="inventory_of_goods">Инвентаризиция</string>
    <string name="pnz">ПНЗ</string>
    <string name="storage_locations">Места хранения</string>
    <string name="number">№</string>
    <string name="storage">Склад</string>
    <string name="period_kip">Период КИП</string>
    <string name="provider">Поставщик</string>
    <string name="expiration_date_abbreviation">СГ</string>
    <string name="expiration_dates">Сроки годности</string>
    <string name="goods">Товары</string>
    <string name="check">Сверка</string>
    <string name="storage_place">Место хранения</string>
    <string name="group_of_goods">Группа товаров</string>
    <string name="section">Секция</string>
    <string name="expected_deliveries">Планируемые поставки</string>
    <string name="date">Дата</string>
    <string name="date_and_time_last_sales">Дата и время последней продажи</string>
    <string name="last_day_sales">Объем продаж за последние сутки</string>
    <string name="last_week_sales">Объем продаж за 7 дней</string>
    <string name="common_info">Общая информация</string>
    <string name="market_storage">Общий запас в ТК</string>
    <string name="empty_place">Пустое место</string>
    <string name="task_type">Тип задания</string>
    <string name="price_one">Цена 1</string>
    <string name="price_two">Цена 2</string>
    <string name="price_one_sell_out">Цена 1 (Распродажа)</string>
    <string name="price_two_by_stock">Цена 2 (По акции)</string>
    <string name="scan_price_description">Наведите камеру на QR код ценника</string>
    <string name="price_without_discount">Цена БДК, руб</string>
    <string name="price_with_discount">Цена с ДК, руб</string>
    <string name="confirmation_delete_task">По заданию \"%1$s\" будут удалены все непереданные данные.</string>
    <string name="number_of_mark">Количество марок</string>
    <string name="data_loading">Идет загрузка данных</string>
    <string name="point_camera_to_barcode">Наведите камеру на штрихкод EAN</string>
    <string name="picto_nova">\"Новинка\"</string>
    <string name="healthy_food">\"Здоровая еда\"</string>
    <string name="common_product">Обычный товар</string>
    <string name="confirmation_not_save_changes">Несохраненные данные будут удалены. Продолжить?</string>
    <string name="alcohol">Алкоголь</string>
    <string name="excise_alcohol">Акцизный алкоголь</string>
    <string name="marked_product">Маркированный товар</string>
    <string name="vrus">Вино России</string>
    <string name="self_life">Срок годности</string>

    <!-- ZPart info -->
    <string name="storage_z_parts_pattern">Z-партии склада %s</string>
    <string name="three_lines_pattern">%s\n%s\n%s</string>
    <string name="prod_date_pattern">ДП:%s</string>
    <string name="prod_date_long_pattern">Дата производства:\n%s</string>
    <string name="expir_date_pattern">СГ:%s</string>
    <string name="expir_date_long_pattern">Срок годности:\n%s</string>
    <string name="dates_divider">/</string>
    <string name="four_lines_pattern">%s\n%s\n%s\n%s</string>
</resources>
