<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="vm"
            type="com.lenta.bp14.features.good_info.GoodInfoViewModel"/>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <!-- Оставшийся срок годности -->
        <LinearLayout
            style="@style/LinearRowStyle">

            <LinearLayout
                style="@style/LinearCellStyle"
                android:layout_weight="1">

                <TextView
                    style="@style/CellTextViewStyle"
                    android:text="@string/storage_locations"/>

                <TextView
                    style="@style/CellTextViewStyle"
                    android:text="@string/pnz"/>

            </LinearLayout>

            <View
                style="@style/VerticalDivider"/>

            <LinearLayout
                style="@style/LinearCellStyle"
                android:layout_weight="2">

                <TextView
                    style="@style/CellTextViewStyle"
                    android:text="125635; 652148; 635894"/>

                <TextView
                    style="@style/CellTextViewStyle"
                    android:text="50 шт."/>


            </LinearLayout>

        </LinearLayout>

        <View
            style="@style/HorizontalDivider"/>


        <!-- Оставшийся срок годности -->
        <LinearLayout
            style="@style/LinearRowStyle">

            <LinearLayout
                style="@style/LinearCellStyle"
                android:layout_weight="1">

                <TextView
                    style="@style/CellTextViewStyle"
                    android:text="@string/inventory_of_goods"/>

                <TextView
                    style="@style/CellTextViewStyle"
                    android:text="@string/goods_arrival"/>

            </LinearLayout>

            <View
                style="@style/VerticalDivider"/>

            <LinearLayout
                style="@style/LinearCellStyle"
                android:layout_weight="2">

                <TextView
                    style="@style/CellTextViewStyle"
                    android:text="19.07.19 (-25 шт.)"/>

                <TextView
                    style="@style/CellTextViewStyle"
                    android:text="29.07.19 (+50 шт; Z5)"/>


            </LinearLayout>

        </LinearLayout>

        <View
            style="@style/HorizontalDivider"/>


        <!-- Оставшийся срок годности -->
        <LinearLayout
            style="@style/LinearRowStyle">

            <LinearLayout
                style="@style/LinearCellStyle"
                android:layout_weight="1">

                <TextView
                    style="@style/CellTextViewStyle"
                    android:text="@string/price_with_dk"/>

                <TextView
                    style="@style/CellTextViewStyle"
                    android:text="@string/price_without_dk"/>

            </LinearLayout>

            <View
                style="@style/VerticalDivider"/>

            <LinearLayout
                style="@style/LinearCellStyle"
                android:layout_weight="2">

                <TextView
                    style="@style/CellTextViewStyle"
                    android:text="100р."/>

                <TextView
                    style="@style/CellTextViewStyle"
                    android:text="140р."/>


            </LinearLayout>

        </LinearLayout>

        <View
            style="@style/HorizontalDivider"/>


        <!-- Штрихкод -->
        <LinearLayout
            style="@style/LinearRowStyle">

            <LinearLayout
                style="@style/LinearCellStyle"
                android:layout_weight="1">

                <TextView
                    style="@style/CellTextViewStyle"
                    android:text="@string/promotions"/>

            </LinearLayout>

            <View
                style="@style/VerticalDivider"/>

            <LinearLayout
                style="@style/LinearCellStyle"
                android:layout_weight="2">

                <TextView
                    style="@style/CellTextViewStyle"
                    android:text="Распродажа кукурузы ТК 0007"/>

                <TextView
                    style="@style/CellTextViewStyle"
                    android:text="Период 30.05.19 - 12.09.19"/>

            </LinearLayout>

        </LinearLayout>

        <View
            style="@style/HorizontalDivider"/>

    </LinearLayout>

</layout>