<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.lenta.bp14.features.work_list.good_info.GoodInfoWlViewModel" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:invisible="@{vm.showProgress}">


            <!-- Места хранения -->
            <LinearLayout
                style="@style/LinearRowStyle">

                <LinearLayout
                    style="@style/LinearCellStyle"
                    android:layout_weight="1">

                    <TextView
                        style="@style/CellTextStyle"
                        android:text="@string/storage_locations" />

                    <TextView
                        style="@style/CellTextStyle"
                        android:text="@string/pnz" />

                </LinearLayout>

                <View
                    style="@style/VerticalDivider" />

                <LinearLayout
                    style="@style/LinearCellStyle"
                    android:layout_weight="2">

                    <TextView
                        android:id="@+id/tv_storage_places"
                        style="@style/CellTextStyle"
                        android:onClick="@{(view) -> vm.showFullInfo(view)}"
                        android:text="@{vm.good.additional.storagePlaces}"
                        tools:text="125635; 652148; 635894" />

                    <TextView
                        android:id="@+id/tv_remaining_quantity"
                        style="@style/CellTextStyle"
                        android:text="@{@string/quantity_st(vm.good.additional.minStock)}"
                        tools:text="50 шт." />

                </LinearLayout>

            </LinearLayout>

            <View
                style="@style/HorizontalDivider" />


            <!-- Инвентаризация / Приход -->
            <LinearLayout
                style="@style/LinearRowStyle">

                <LinearLayout
                    style="@style/LinearCellStyle"
                    android:layout_weight="1">

                    <TextView
                        style="@style/CellTextStyle"
                        android:text="@string/inventory_of_goods" />

                    <TextView
                        style="@style/CellTextStyle"
                        android:text="@string/goods_arrival" />

                </LinearLayout>

                <View
                    style="@style/VerticalDivider" />

                <LinearLayout
                    style="@style/LinearCellStyle"
                    android:layout_weight="2">

                    <TextView
                        android:id="@+id/tv_removed_good"
                        style="@style/CellTextStyle"
                        android:text="@{vm.good.additional.movement.inventory}"
                        tools:text="19.07.19 (-25 шт.)" />

                    <TextView
                        android:id="@+id/tv_added_good"
                        style="@style/CellTextStyle"
                        android:text="@{vm.good.additional.movement.arrival}"
                        tools:text="29.07.19 (+50 шт; Z5)" />

                </LinearLayout>

            </LinearLayout>

            <View
                style="@style/HorizontalDivider" />


            <!-- Цены -->
            <LinearLayout
                style="@style/LinearRowStyle">

                <LinearLayout
                    style="@style/LinearCellStyle"
                    android:layout_weight="1">

                    <TextView
                        style="@style/CellTextStyle"
                        android:text="@string/price_with_dk" />

                    <TextView
                        style="@style/CellTextStyle"
                        android:text="@string/price_without_dk" />

                </LinearLayout>

                <View
                    style="@style/VerticalDivider" />

                <LinearLayout
                    style="@style/LinearCellStyle"
                    android:layout_weight="2">

                    <TextView
                        style="@style/CellTextStyle"
                        android:text="@{@string/price_r(vm.good.additional.price.discountPrice)}"
                        tools:text="100р." />

                    <TextView
                        style="@style/CellTextStyle"
                        android:text="@{@string/price_r(vm.good.additional.price.commonPrice)}"
                        tools:text="140р." />

                </LinearLayout>

            </LinearLayout>

            <View
                style="@style/HorizontalDivider" />


            <!-- Промо-акции -->
            <LinearLayout
                style="@style/LinearRowStyle">

                <LinearLayout
                    style="@style/LinearCellStyle"
                    android:layout_weight="1">

                    <TextView
                        style="@style/CellTextStyle"
                        android:text="@string/promotions" />

                </LinearLayout>

                <View
                    style="@style/VerticalDivider" />

                <LinearLayout
                    style="@style/LinearCellStyle"
                    android:layout_weight="2">

                    <TextView
                        android:id="@+id/tv_promotion_name"
                        style="@style/CellTextStyle"
                        android:onClick="@{(view) -> vm.showFullInfo(view)}"
                        android:text="@{vm.good.additional.promo.name}"
                        tools:text="Распродажа кукурузы ТК 0007" />

                    <TextView
                        android:id="@+id/tv_promotion_period"
                        style="@style/CellTextStyle"
                        android:text="@{vm.good.additional.promo.period}"
                        tools:text="Период 30.05.19 - 12.09.19" />

                </LinearLayout>

            </LinearLayout>

            <View
                style="@style/HorizontalDivider" />

        </LinearLayout>


        <!-- Индикатор загрузки -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:invisible="@{!vm.showProgress}">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/data_loading" />

        </LinearLayout>

    </FrameLayout>

</layout>