<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.lenta.bp14.features.not_exposed.storage_z_parts.StorageZPartsNotExposedViewModel" />

        <variable
            name="rvConfig"
            type="com.lenta.shared.utilities.databinding.DataBindingRecyclerViewConfig" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout style="@style/FirstRowStyle">

                <LinearLayout
                    style="@style/LinearCellStyle"
                    android:layout_weight="@integer/three_three_1">

                    <TextView
                        style="@style/FirstRowTextStyle"
                        android:text="@string/number" />

                </LinearLayout>

                <LinearLayout
                    style="@style/LinearCellStyle"
                    android:layout_weight="@integer/three_three_2">

                    <TextView
                        style="@style/FirstRowTextStyle"
                        android:text="@string/z_parts" />

                </LinearLayout>

                <LinearLayout
                    style="@style/LinearCellStyle"
                    android:layout_weight="@integer/three_three_3">

                    <TextView
                        style="@style/FirstRowTextStyle"
                        android:text="@string/quantity" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <View style="@style/HorizontalDivider" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv"
            rv_config="@{rvConfig}"
            tools:listitem="@layout/item_storage_z_part"
            items="@{vm.zParts}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</layout>