<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.lenta.bp14.features.main_menu.MainMenuViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/logo_lenta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/b_print"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{(view) -> vm.onClickPrint()}"
                android:text="@string/print_labels"
                android:textAllCaps="false"
                app:icon="@drawable/ic_print_price_tag_32dp"
                app:iconGravity="end" />


            <Button
                android:id="@+id/b_create_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{(view) -> vm.onClickCreateTask()}"
                android:text="@string/create_task"
                android:textAllCaps="false"
                app:icon="@drawable/ic_create_task_white_32dp"
                app:iconGravity="end"
                app:isGone="@{!vm.createTaskButtonVisibility}" />


            <Button
                android:id="@+id/b_work_with_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{(view) -> vm.onClickWorkWithTask()}"
                android:text="@string/work_with_tasks"
                android:textAllCaps="false"
                app:icon="@drawable/ic_document_page_white_32dp"
                app:iconGravity="end"
                app:isGone="@{!vm.workWithTaskButtonVisibility}" />

            <Button
                android:id="@+id/b_check_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{(view) -> vm.onClickCheckList()}"
                android:text="@string/check_list"
                android:textAllCaps="false"
                app:icon="@drawable/ic_check_list_white_32dp"
                app:iconGravity="end"
                app:isGone="@{!vm.checkListButtonVisibility}" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>